# agdb_bot

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  logging.yaml  mypy.ini  pyproject.toml
app/: main.py
app/adapters/: agdb_api.py  models.py
app/common/: settings.py
scripts/: run-bot.sh
